# Trash-Can-Segmentation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data_loader.py  pyproject.toml
notebooks/: binary.ipynb  playground.ipynb  tune_resnet.ipynb
scripts/: get_annotations.py  load_model.py  train_resunet.py  train_resunet_mini.py  tune_resnet34.py  tune_resnetv2.py
src/trashcan/components/models/: __init__.py  resunet.py  resunet_mini.py
src/trashcan/utils/: vis_utils.py
src/trashcan_core/components/: data_loader.py  mask_generator.py  plotter.py  trainer.py
src/trashcan_core/components/constants/: __init__.py  data_configs.py  file_paths.py
src/trashcan_core/components/models/: __init__.py  net.py
src/trashcan_frontend/: frontend.py
